--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: python
 
 python:
-  - '3'
+  - '3.4'
+  - '3.5'
+  - '3.6'
+  - '3.7'
+
+install: true
 
 script:
   - python bovine_picker/picker_test.py
+
+branches:
+  only:
+    - master
